<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wefish.ProfileFragment"
    android:background="@drawable/sea">

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="48dp"
        android:text="@string/NameText"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/NameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileImageText" />

    <TextView
        android:id="@+id/ProfileImageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="116dp"
        android:text="@string/ProfileImageText"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/NameEditText"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NameEditText"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/NameText"
        app:layout_constraintTop_toBottomOf="@+id/ProfileImageText" />

    <TextView
        android:id="@+id/SurnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:text="@string/SurnameText"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/SurnameEditText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameText" />

    <EditText
        android:id="@+id/SurnameEditText"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/SurnameEditText"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/SurnameText"
        app:layout_constraintTop_toBottomOf="@+id/NameEditText" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="260dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/EmailEditText"
        android:inputType="textEmailAddress"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/EmailText"
        app:layout_constraintTop_toBottomOf="@+id/SurnameEditText" />

    <Button
        android:id="@+id/PickImgButton"
        android:layout_width="108dp"
        android:layout_height="38dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="116dp"
        android:text="@string/buttonImage"
        app:backgroundTint="@color/blue"
        app:layout_constraintStart_toEndOf="@+id/ProfileImageText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="36dp"
        android:text="@string/EmailText"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/EmailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SurnameText" />

    <ImageView
        android:id="@+id/imageViewPP"
        android:layout_width="112dp"
        android:layout_height="126dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="PP"
        app:layout_constraintBottom_toTopOf="@+id/NameEditText"
        app:layout_constraintStart_toEndOf="@+id/ProfileImageText"
        app:srcCompat="@drawable/icons8_account_60px"
        tools:src="@drawable/icons8_account_60px"
        tools:srcCompat="@drawable/icons8_account_60px" />

    <Button
        android:id="@+id/logBookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/create_fish_log_book"
        app:backgroundTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailEditText" />


</androidx.constraintlayout.widget.ConstraintLayout>