<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea"
    tools:context="com.example.wefish.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:contentScrim="@color/blue"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:titleEnabled="false"
        tools:ignore="MissingConstraints">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="Fishing App"
            app:titleTextColor="#FFFFFF"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.appbar.AppBarLayout>



        <ViewFlipper
            android:id="@+id/viewFlipper"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />


    <ImageButton
        android:id="@+id/imageViewM1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="223dp"
        android:backgroundTint="#0DFFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icons8_sports_fishing_60px_3" />


    <ImageButton
        android:id="@+id/imageViewM2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="223dp"
        android:backgroundTint="#0FFFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/icons8_fishing_boat_60px_1" />

    <ImageButton
        android:id="@+id/imageViewM3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="114dp"
        android:backgroundTint="#0FFFFFFF"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icons8_account_60px" />

    <Button
        android:id="@+id/buttonLanguage"
        android:layout_width="186dp"
        android:layout_height="37dp"
        android:background="@color/blue"
        android:text="@string/change_language"
        app:cornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewM3"
        app:layout_constraintVertical_bias="0.761" />

    <TextView
        android:id="@+id/textViewMain"
        android:layout_width="57dp"
        android:layout_height="26dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="1dp"
        android:text="@string/textViewMain"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewM1" />

    <TextView
        android:id="@+id/textViewMain1"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="76dp"
        android:text="@string/textViewMain1"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewM2" />

    <TextView
        android:id="@+id/textViewMain2"
        android:layout_width="78dp"
        android:layout_height="21dp"
        android:layout_marginTop="1dp"
        android:text="@string/textViewMainn2"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewM3" />

</androidx.constraintlayout.widget.ConstraintLayout>